# loop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: 01-product-spec.md  02-ui-and-design.md  03-build-plan.md  04-release-and-distribution.md  05-additional-scope.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/github/: mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/linear/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/worktree/: mod.rs
src/components/: CommandPalette.tsx  Footer.tsx
src/components/board/: Board.tsx
src/components/middle/: MiddleColumn.tsx  PlanEditor.tsx  TerminalSession.tsx
src/components/onboarding/: Onboarding.tsx
src/components/right/: RightColumn.tsx
src/components/settings/: SettingsPanel.tsx
src/components/ui/: button.tsx  input.tsx  segmented-control.tsx
src/hooks/: useTheme.ts
