[package]
name = "herd"
version = "0.1.0"
description = "A macOS desktop app for managing Linear tickets across Git worktrees"
authors = ["Bethan Dutton"]
edition = "2021"

[lib]
name = "herd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
portable-pty = "0.8"
glob = "0.3"

